--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.4",
     "next": "11.1.2",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.1",
-    "styled-reset": "^4.3.4"
+    "styled-reset": "^4.3.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.13.2",
